--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Movie Search Mobile App</string>
+    <string name="movie_search">Movie Search</string>
+    <string name="error_data_message">Error loading data from The Movie Database API</string>
 </resources>
