--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Movie Search Mobile App</string>
     <string name="movie_search">Movie Search</string>
     <string name="error_data_message">Error loading data from The Movie Database API</string>
+    <string name="vote_average">Vote_average</string>
+    <string name="release_date">release_date</string>
+    <string name="title">title</string>
+    <string name="search">Search</string>
 </resources>
